--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -1,6 +1,7 @@
-version = 3.0.0
-
+# https://github.com/scalameta/scalafmt/releases
+version = 3.5.8
 style = default
+runner.dialect = scala213
 
 fileOverride {
   "glob:**/scala-3*/**" {
@@ -9,61 +10,3 @@ fileOverride {
 }
 
 maxColumn = 120
-
-align = most
-align.openParenCallSite = false
-align.openParenDefnSite = false
-align.multiline = true
-
-align.tokens.add = [
-
-  {code = "<-", owner = "Enumerator.Generator"}
-  //Everything before the Term.Assign was the default regex. To find the
-  //default value, look through the code here:
-  //https://github.com/scalameta/scalafmt/blob/master/scalafmt-core/shared/src/main/scala/org/scalafmt/config/Align.scala
-  {code = "=", owner = "(Enumerator.Generator|Val|Defn.(Va(l|r)|Def|Type))|Term.Assign"}
-
-  //used to align comments
-  "//"
-
-  //used for aligning type definition
-  ":"
-
-  //used when creating tuples
-  {code = "->", owner = "Term.ApplyInfix"},
-
-  //sbt specific
-  {code = "%", owner = "Term.ApplyInfix"},
-  {code = "%%", owner = "Term.ApplyInfix"}
-  {code = "%%%", owner = "Term.ApplyInfix"}
-  {code = ":=", owner = "Term.ApplyInfix"}
-  {code = "withSources", owner = "Term.ApplyInfix"}
-  "extends"
-]
-
-continuationIndent {
-  callSite = 2
-  defnSite = 2
-  ctorSite = 2
-  extendSite = 2
-  withSiteRelativeToExtends = 0
-}
-
-verticalMultiline.atDefnSite = false
-verticalMultiline.newlineAfterOpenParen = true
-verticalMultiline.arityThreshold = 3
-
-newlines {
-  alwaysBeforeTopLevelStatements = true
-  sometimesBeforeColonInMethodReturnType = true
-  penalizeSingleSelectMultiArgList = false
-  alwaysBeforeElseAfterCurlyIf = true
-  neverInResultType = false
-  alwaysBeforeMultilineDef = false
-  implicitParamListModifierForce = []
-  afterCurlyLambda = squash
-}
-
-spaces {
-  afterKeywordBeforeParen = true
-}
