--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,21 +24,15 @@ jobs:
       matrix:
         os: [ubuntu-latest]
         scala: [3.1.1, 2.13.8, 2.12.15]
-        java: [temurin@8, temurin@17, graalvm@11]
+        java: [temurin@8, temurin@17]
         project: [rootJS, rootJVM]
         exclude:
           - scala: 3.1.1
             java: temurin@17
-          - scala: 3.1.1
-            java: graalvm@11
           - scala: 2.12.15
             java: temurin@17
-          - scala: 2.12.15
-            java: graalvm@11
           - project: rootJS
             java: temurin@17
-          - project: rootJS
-            java: graalvm@11
     runs-on: ${{ matrix.os }}
     steps:
       - name: Checkout current branch (full)
@@ -77,22 +71,6 @@ jobs:
           distribution: jdkfile
           java-version: 17
           jdkFile: ${{ steps.download-java-temurin-17.outputs.jdkFile }}
-
-      - name: Download Java (graalvm@11)
-        id: download-java-graalvm-11
-        if: matrix.java == 'graalvm@11'
-        uses: typelevel/download-java@v2
-        with:
-          distribution: graalvm
-          java-version: 11
-
-      - name: Setup Java (graalvm@11)
-        if: matrix.java == 'graalvm@11'
-        uses: actions/setup-java@v3
-        with:
-          distribution: jdkfile
-          java-version: 11
-          jdkFile: ${{ steps.download-java-graalvm-11.outputs.jdkFile }}
 
       - name: Cache sbt
         uses: actions/cache@v3
@@ -190,22 +168,6 @@ jobs:
           distribution: jdkfile
           java-version: 17
           jdkFile: ${{ steps.download-java-temurin-17.outputs.jdkFile }}
-
-      - name: Download Java (graalvm@11)
-        id: download-java-graalvm-11
-        if: matrix.java == 'graalvm@11'
-        uses: typelevel/download-java@v2
-        with:
-          distribution: graalvm
-          java-version: 11
-
-      - name: Setup Java (graalvm@11)
-        if: matrix.java == 'graalvm@11'
-        uses: actions/setup-java@v3
-        with:
-          distribution: jdkfile
-          java-version: 11
-          jdkFile: ${{ steps.download-java-graalvm-11.outputs.jdkFile }}
 
       - name: Cache sbt
         uses: actions/cache@v3
@@ -349,22 +311,6 @@ jobs:
           distribution: jdkfile
           java-version: 17
           jdkFile: ${{ steps.download-java-temurin-17.outputs.jdkFile }}
-
-      - name: Download Java (graalvm@11)
-        id: download-java-graalvm-11
-        if: matrix.java == 'graalvm@11'
-        uses: typelevel/download-java@v2
-        with:
-          distribution: graalvm
-          java-version: 11
-
-      - name: Setup Java (graalvm@11)
-        if: matrix.java == 'graalvm@11'
-        uses: actions/setup-java@v3
-        with:
-          distribution: jdkfile
-          java-version: 11
-          jdkFile: ${{ steps.download-java-graalvm-11.outputs.jdkFile }}
 
       - name: Cache sbt
         uses: actions/cache@v3
