--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -30,13 +30,15 @@ jobs:
         os: [ubuntu-latest]
         scala: [3, 2.13, 2.12]
         java: [temurin@8, temurin@17]
-        project: [rootJS, rootJVM]
+        project: [rootJS, rootJVM, rootNative]
         exclude:
           - scala: 3
             java: temurin@17
           - scala: 2.12
             java: temurin@17
           - project: rootJS
+            java: temurin@17
+          - project: rootNative
             java: temurin@17
     runs-on: ${{ matrix.os }}
     timeout-minutes: 60
@@ -83,6 +85,10 @@ jobs:
         if: matrix.project == 'rootJS'
         run: sbt 'project ${{ matrix.project }}' '++ ${{ matrix.scala }}' Test/scalaJSLinkerResult
 
+      - name: nativeLink
+        if: matrix.project == 'rootNative'
+        run: sbt 'project ${{ matrix.project }}' '++ ${{ matrix.scala }}' Test/nativeLink
+
       - name: Test
         run: sbt 'project ${{ matrix.project }}' '++ ${{ matrix.scala }}' test
 
@@ -96,11 +102,11 @@ jobs:
 
       - name: Make target directories
         if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
-        run: mkdir -p enclosure/js/target enclosure/jvm/target project/target
+        run: mkdir -p enclosure/js/target enclosure/native/target enclosure/jvm/target project/target
 
       - name: Compress target directories
         if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
-        run: tar cf targets.tar enclosure/js/target enclosure/jvm/target project/target
+        run: tar cf targets.tar enclosure/js/target enclosure/native/target enclosure/jvm/target project/target
 
       - name: Upload target directories
         if: github.event_name != 'pull_request' && (startsWith(github.ref, 'refs/tags/v') || github.ref == 'refs/heads/main')
@@ -170,6 +176,16 @@ jobs:
           tar xf targets.tar
           rm targets.tar
 
+      - name: Download target directories (3, rootNative)
+        uses: actions/download-artifact@v4
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-3-rootNative
+
+      - name: Inflate target directories (3, rootNative)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
       - name: Download target directories (2.13, rootJS)
         uses: actions/download-artifact@v4
         with:
@@ -190,6 +206,16 @@ jobs:
           tar xf targets.tar
           rm targets.tar
 
+      - name: Download target directories (2.13, rootNative)
+        uses: actions/download-artifact@v4
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.13-rootNative
+
+      - name: Inflate target directories (2.13, rootNative)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
       - name: Download target directories (2.12, rootJS)
         uses: actions/download-artifact@v4
         with:
@@ -206,6 +232,16 @@ jobs:
           name: target-${{ matrix.os }}-${{ matrix.java }}-2.12-rootJVM
 
       - name: Inflate target directories (2.12, rootJVM)
+        run: |
+          tar xf targets.tar
+          rm targets.tar
+
+      - name: Download target directories (2.12, rootNative)
+        uses: actions/download-artifact@v4
+        with:
+          name: target-${{ matrix.os }}-${{ matrix.java }}-2.12-rootNative
+
+      - name: Inflate target directories (2.12, rootNative)
         run: |
           tar xf targets.tar
           rm targets.tar
